--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   
   "version": "0.0.0",
   "type": "module",
+  "base": "/udemy-animations/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
